--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'application'
 
-mainClassName = 'makamys.Hello'
+mainClassName = 'makamys.NPSObfuscationMapper'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -14,7 +14,7 @@ dependencies {
 jar {
     manifest {
         attributes (
-            'Main-Class': 'makamys.Hello'
+            'Main-Class': 'makamys.NPSObfuscationMapper'
         )
     }
 	
